# test_tender_parser

./: .env.example  .gitignore  README.md  cli.py  main.py  pyproject.toml
app/api/: depends.py
app/api/endpoints/: __init__.py  trends.py
app/api/schemas/: tender.py
app/cli/base/: command_abc.py
app/cli/commands/: __init__.py  get_new.py  max_count.py  output.py
app/core/: __init__.py  config.py  lifespan.py
app/db/: __init__.py  crud.py  models.py
app/repositories/: __init__.py  tender_repository.py
app/services/: ros_tender_parser.py  tender_parser_service.py  tender_service.py
